--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -2,8 +2,16 @@
 <resources>
     <string name="app_name">Turisteando_V2</string>
     <string name="resenahoteles">
-        Considerando que la libertad, la justicia y la paz en el mundo tienen por base el reconocimiento de la dignidad intrinseca y de los derechos iguales e inalienables de todos los miembros de la familia humana;
-
-        Considerando que el desconocimiento y el menosprecio de los derechos humanos han originado actos de barbarie ultrajantes para la conciencia de la humanidad, y que se ha proclamado, como la aspiracion mas elevada del hombre, el advenimiento de un mundo en que los seres humanos, liberados del temor y de la miseria, disfruten de la libertad de palabra y de la libertad de creencias;
+    In our hotels you can enjoy all the comforts and food you want from 120,000 COP onwards
     </string>
+    <string name="resenarestaurantes">
+        Find delicious typical food such as seafood from 30,000 COP onwards
+    </string>
+    <string name="resenasitios">
+        Find fun tourist attractions and tours guided by professionals from 50,000 COP and up
+    </string>
+    <string name="opcion1">English</string>
+    <string name="opcion2">Spanish</string>
+    <string name="opcion3">Italian</string>
+    <string name="opcion4">About</string>
 </resources>
