--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -2,8 +2,16 @@
 <resources>
     <string name="app_name">Turisteando_V2</string>
     <string name="resenahoteles">
-        Considerando que la libertad, la justicia y la paz en el mundo tienen por base el reconocimiento de la dignidad intrinseca y de los derechos iguales e inalienables de todos los miembros de la familia humana;
-
-        Considerando que el desconocimiento y el menosprecio de los derechos humanos han originado actos de barbarie ultrajantes para la conciencia de la humanidad, y que se ha proclamado, como la aspiracion mas elevada del hombre, el advenimiento de un mundo en que los seres humanos, liberados del temor y de la miseria, disfruten de la libertad de palabra y de la libertad de creencias;
+    Nei nostri hotel puoi goderti tutti i comfort e il cibo che desideri a partire da 120.000 COP
     </string>
+    <string name="resenarestaurantes">
+    Trova deliziosi piatti tipici come i frutti di mare da 30.000 COP in poi
+    </string>
+    <string name="resenasitios">
+    Trova divertenti attrazioni turistiche e tour guidati da professionisti da 50.000 COP in su
+    </string>
+    <string name="opcion1">Inglese</string>
+    <string name="opcion2">Spagnolo</string>
+    <string name="opcion3">Italiano</string>
+    <string name="opcion4">Di</string>
 </resources>
