--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -14,4 +14,8 @@
     <string name="opcion2">Spagnolo</string>
     <string name="opcion3">Italiano</string>
     <string name="opcion4">Di</string>
+    <string name="contraseña">Inserisci la tua password</string>
+    <string name="usuario">Inserisci il tuo nome utente</string>
+    <string name="INGRESO">Inserisci</string>
+    <string name="resenaSanti">Sono Santiago, un ragazzo di 17 anni, mi piace cantare, suonare strumenti, sviluppare pagine web e programmare app</string>
 </resources>
