--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -5,7 +5,7 @@
     In our hotels you can enjoy all the comforts and food you want from 120,000 COP onwards
     </string>
     <string name="resenarestaurantes">
-        Find delicious typical food such as seafood from 30,000 COP onwards
+        Find delicious typical food like the bandeja paisa from 30,000 COP onwards
     </string>
     <string name="resenasitios">
         Find fun tourist attractions and tours guided by professionals from 50,000 COP and up
