--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -5,7 +5,7 @@
     Nei nostri hotel puoi goderti tutti i comfort e il cibo che desideri a partire da 120.000 COP
     </string>
     <string name="resenarestaurantes">
-    Trova deliziosi piatti tipici come i frutti di mare da 30.000 COP in poi
+    Trova deliziosi piatti tipici come la bandeja paisa da 30.000 COP in poi
     </string>
     <string name="resenasitios">
     Trova divertenti attrazioni turistiche e tour guidati da professionisti da 50.000 COP in su
