--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
      En nuestros hoteles podras disfrutar de todas las comodidades y la alimentacion que desees desde 120.000 COP en adelante
     </string>
     <string name="resenarestaurantes">
-        Encuentra deliciosa comida tipica como los mariscos desde 30.000 COP en adelante
+        Encuentra deliciosa comida tipica como la bandeja paisa desde 30.000 COP en adelante
     </string>
     <string name="resenasitios">
         Encuentra divertidas atracciones turisticas y recorridos guiados por profesionales desde 50.000 COP en adelante
