--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -21,5 +21,5 @@
     <string name="Nombre">Name</string>
     <string name="Teléfono">Phone</string>
     <string name="resenaSanti">I am Santiago, a 17-year-old boy, I like to sing, play instruments, develop web pages and program apps</string>
-    <string name="platorecomendado">Recommended</string>
+    <string name="plato">Recommended</string>
 </resources>
