--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -21,5 +21,5 @@
     <string name="Nombre">Nome</string>
     <string name="Teléfono">telefono</string>
     <string name="resenaSanti">Sono Santiago, un ragazzo di 17 anni, mi piace cantare, suonare strumenti, sviluppare pagine web e programmare app</string>
-    <string name="platorecomendado">Consigliato</string>
+    <string name="plato">Consigliato</string>
 </resources>
