--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,5 @@
     <string name="Teléfono">Teléfono</string>
     <string name="Nombre">Nombre</string>
     <string name="resenaSanti">Soy Santiago, un chico de 17 años, me gusta cantar, tocar instrumentos, desarrollar páginas web y programar apps</string>
-    <string name="platorecomendado">Recomendado</string>
+    <string name="plato">Recomendado</string>
 </resources>
